k8s/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: react-app

  template:
    metadata:
      labels:
        app: react-app

    spec:
      containers:
      - name: react-app
        image: ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/react-app:latest

        ports:
        - containerPort: 80
