k8s/manifests/service.yml
apiVersion: v1
kind: Service

metadata:
  name: react-service

spec:

  selector:
    app: react-app

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
